<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>action5_ros</name>
  <version>0.0.1</version>
  <description>action5 camera ros wrapper</description>
  <maintainer email="team-d2@roboken.iit.tsukuba.ac.jp">team-d2</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp_components</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>libopencv-dev</depend>
  <depend>libopencv-imgproc-dev</depend>
  <depend>cv_bridge</depend>
  
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_clang_format</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
